objects/InsurancePolicy.object
<CustomObject>
    <fields>
        <fullName>HC_fld_cobertura__c</fullName>
        <description>Campo custom que identifica el tipo de covertura</description>
        <label>Cobertura</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Individual</fullName>
                </value>
                <value>
                    <fullName>Familiar</fullName>
                </value>
                <value>
                    <fullName>Colectivo o Grupo</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HC_fld_consideracionesInteres__c</fullName>
        <description>Campo custom de tipo Long Text Area para incluir resto de condiciones del contrato</description>
        <label>Consideraciones de Interes</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>HC_fld_numeroPoliza__c</fullName>
        <displayFormat>P-{0000}</displayFormat>
        <label>Número de Poliza</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>HC_fld_renovacionAutomatica__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Campo custom que marcá si la poliza se renueva automaticamente.</description>
        <label>Renovación Automática</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>All_InsurancePolicies</fullName>
        <filterScope>Everything</filterScope>
        <label>All Insurance Policies</label>
    </listViews>
    <recordTypes>
        <fullName>HC_rt_polizaSeguros</fullName>
        <active>true</active>
        <description>Record Type para identidicar la Polizas de Seguro de los Clientes</description>
        <label>Póliza de Seguros</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>